--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -10,13 +10,16 @@ register_user:
   controller: App\Controller\UserController::registerUser 
 login_form:
   path: /login_form
-  controller: App\Controller\SecurityController::logInForm
+  controller: App\Controller\UserController::logInForm
 login_user:
   path: /login_user
   methods: GET
   controller: App\Controller\UserController::logInUser  
+logout:
+  path: /logout
+  controller: App\Controller\UserController::logout  
 start_lobby_page:
-  path: /start_lobby_page/{userId}
+  path: /start_lobby_page
   methods: GET
   controller: App\Controller\UserController::startLobbyPage
 
