--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -20,10 +20,14 @@ logout:
   controller: App\Controller\UserController::logout  
 start_lobby_page:
   path: /start_lobby_page
-  methods: GET
   controller: App\Controller\UserController::startLobbyPage
+join_lobby:
+  path: /join_lobby
+  controller: App\Controller\UserController::joinLobby
+lobby_page:
+  path: /lobby_page
+  controller: App\Controller\UserController::lobbyPage    
 
 main_game:
   path: /main_game
   controller: App\Controller\UserController::mainGame
-
