настроил ссылки готовности игроков, сделал функции проверку готовности лобби

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -45,6 +45,22 @@ kick_from_lobby:
   path: /kick_from_lobby
   methods: POST
   controller: App\Controller\LobbyPlaceController::kickFromLobby  
+make_player_ready:
+  path: /make_player_ready
+  methods: POST
+  controller: App\Controller\LobbyPlaceController::makePlayerReady
+make_player_not_ready:
+  path: /make_player_not_ready
+  methods: POST
+  controller: App\Controller\LobbyPlaceController::makePlayerNotReady
+is_all_players_ready
+  path: /is_all_players_ready
+  methods: POST
+  controller: App\Controller\LobbyPlaceController::isAllPlayersReady
+get_player_status:
+  path: /get_player_status
+  methods: POST
+  controller: App\Controller\LobbyPlaceController::getPlayerStatus  
 
 main_game:
   path: /main_game/{keyRoom}
@@ -72,10 +88,6 @@ find_count_players:
   path: /find_count_players
   methods: POST
   controller: App\Controller\GameController::findCountPLayersInLobby
-get_player_status:
-  path: get_player_status
-  methods: POST
-  controller: App\Controller\GameController::getPlayerStatus  
 
 error_page:
   path: /error_page/{messageCode}
