--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -49,12 +49,12 @@ make_player_ready:
   path: /make_player_ready
   methods: POST
   controller: App\Controller\LobbyPlaceController::makePlayerReady
-make_player_not_ready
-  path: make_player_not_ready
+make_player_not_ready:
+  path: /make_player_not_ready
   methods: POST
   controller: App\Controller\LobbyPlaceController::makePlayerNotReady 
 get_player_status:
-  path: get_player_status
+  path: /get_player_status
   methods: POST
   controller: App\Controller\LobbyPlaceController::getPlayerStatus  
 find_count_players:
@@ -65,6 +65,10 @@ is_all_players_ready:
   path: /is_all_players_ready
   methods: POST
   controller: App\Controller\LobbyPlaceController::isAllPlayersReady
+get_ids_players:
+  path: /get_ids_players
+  methods: POST
+  controller: App\Controller\LobbyPlaceController::findPlayersIdsInLobby
 
 main_game:
   path: /main_game/{keyRoom}
@@ -75,7 +79,7 @@ start_game:
   controller: App\Controller\GameController::startGame
 create_map: 
   path: /create_map
-  methods: GET
+  methods: POST
   controller: App\Controller\GameController::createGameMap
 find_map:
   path: /find_map
